typescript/checker/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature10.ts.stderr
error: TS1096
 --> $DIR/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature10.ts:2:5
  |
2 |    [a, b]: number
  |     ^

